<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginPage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wave">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Service Novigrad"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="50dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:id="@+id/title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nom d'utilisateur:"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:id="@+id/nomDutilisateur"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mot de passe:"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:password="true"
                    android:id="@+id/motDePasse"
                    android:textSize="25dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:textAlignment="center">

                <Button
                    android:id="@+id/seConnecter"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/white"
                    android:text="Se connecter"
                    android:textAlignment="center"
                    android:textColor="@color/lightBlue"
                    android:textSize="25dp"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Vous n'avez pas de compte?
                    Cliquez ici pour s'inscrire"
                android:backgroundTint="@color/white"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:id="@+id/creerUnCompte"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/createAccountForSuccusale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Si vous etes le nouveau employee, Cliquez ici"
                android:backgroundTint="@color/white"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>