<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wave9">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Modifier le service"
            android:textColor="@color/white"
            android:textSize="40dp">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nom du service :"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/serviceNameEditText"
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:maxLines="1"
                    android:scrollbars="vertical"/>

            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Description :"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/serviceDescriptionEditText"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textSize="25sp"
                    android:maxLines="2"
                    android:scrollbars="vertical"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|top"
                android:layout_marginBottom="15dp"
                android:columnCount="1"
                android:rowCount="5">

                <CheckBox
                    android:id="@+id/dobCheckBox"
                    android:text="Date de naissance requise"></CheckBox>

                <CheckBox
                    android:id="@+id/addressCheckBox"
                    android:text="Addresse requise"></CheckBox>

                <CheckBox
                    android:id="@+id/photoCheckBox"
                    android:text="Photo requise"></CheckBox>

                <CheckBox
                    android:id="@+id/citizenStatusCheckBox"
                    android:text="Statut de citoyenneté requis"></CheckBox>

                <CheckBox
                    android:id="@+id/proofResidenceCheckBox"
                    android:text="Preuve de résidence"></CheckBox>
            </GridLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/updateService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightBlue"
                android:fontFamily="sans-serif"
                android:text="Mettre à jour compte"
                android:textColor="@color/white"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Annuler"
                android:backgroundTint="@color/lightBlue"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="sans-serif"></Button>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>